US13769: New Song Layout fix 2up cards on mobile

--- a/_assets/stylesheets/_cards.scss
+++ b/_assets/stylesheets/_cards.scss
@@ -84,7 +84,8 @@
 .cards-2x-sm {
   @media (max-width: $screen-sm) {
     .card {
-      max-width: 50%;
+      float: left;
+      width: 50%;
     }
   }
 }
